--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,41 @@
 				</dependencies>
 			</dependencyManagement>
 		</profile>
+		<profile>
+			<!--
+			****************************** 
+			* GWT client                 *
+			******************************
+			-->
+			<id>gwt</id>
+			<activation>
+				<property>
+					<name>client</name>
+					<value>gwt</value>
+				</property>
+			</activation>
+			<modules>
+				<module>cee-webreader</module>
+			</modules>
+		</profile>
+		<profile>
+			<!--
+			****************************** 
+			* REST client                *
+			******************************
+			-->
+			<id>rest</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>client</name>
+					<value>rest</value>
+				</property>
+			</activation>
+			<modules>
+				<module>cee-rest</module>
+			</modules>
+		</profile>
 	</profiles>
 
 	<modules>
@@ -213,9 +248,7 @@
 		<module>cee-client-api</module>
 		<module>cee-store-test-suite</module>
 		<module>cee-processing</module>
-		<module>cee-service</module>
-		<module>cee-rest</module>	
-		<module>cee-webreader</module>
+		<module>cee-service</module>	
 		<module>cee-webreader-tomcat</module>
 		<module>cee-webreader-jetty</module>
 		<module>jetty-starter</module>
