--- a/cee-webreader/pom.xml
+++ b/cee-webreader/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cee-webreader</artifactId>
 	<packaging>war</packaging>
-	<name>News Reader</name>
+	<name>News Reader GWT</name>
 		
 	<parent>
 		<groupId>com.cee</groupId>
