--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 		<gwt.version>2.5.1</gwt.version>
 		<spring.version>3.1.0.RELEASE</spring.version>
 		<slf4j.version>1.6.4</slf4j.version>
-		<jackrabbit.version>2.2.10</jackrabbit.version>
 		<jetty.version>9.0.0.M0</jetty.version>
+    <lucene.version>4.3.0</lucene.version>
 		<source.encoding>UTF-8</source.encoding>
 	</properties>
 
@@ -89,7 +89,6 @@
 					<licenseName>apache_v2</licenseName>
 					<roots>
 						<root>src/main/java</root>
-						<!--root>src/main/resources</root-->
 						<root>src/test/java</root>
 					</roots>
 				</configuration>
@@ -100,108 +99,7 @@
 	
 	<profiles>
 		<profile>
-			<!--
-			****************************** 
-			* JCR Store Backend          *
-			******************************
-			-->
-			<id>jcr</id>
-			<activation>
-				<property>
-					<name>store</name>
-					<value>jcr</value>
-				</property>
-			</activation>
-			<modules>
-				<module>cee-store-jcr</module>
-			</modules>
-			<dependencyManagement>
-				<dependencies>
-					<dependency>
-						<groupId>com.cee</groupId>
-						<artifactId>cee-store-jcr</artifactId>
-						<version>${project.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>javax.jcr</groupId>
-						<artifactId>jcr</artifactId>
-						<version>2.0</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.jackrabbit</groupId>
-						<artifactId>jackrabbit-core</artifactId>
-						<version>${jackrabbit.version}</version>
-						<exclusions>
-							<exclusion>
-								<groupId>org.slf4j</groupId>
-								<artifactId>jcl-over-slf4j</artifactId>
-							</exclusion>
-							<exclusion>
-								 <groupId>rome</groupId>
-								 <artifactId>rome</artifactId>
-							</exclusion>
-						</exclusions>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.jackrabbit</groupId>
-						<artifactId>jackrabbit-jcr-commons</artifactId>
-						<version>${jackrabbit.version}</version>
-					</dependency>
-				</dependencies>
-			</dependencyManagement>
-		</profile>
-		<profile>
-			<!--
-			****************************** 
-			* Lucene Store Backend       *
-			******************************
-			-->
-			<id>lucene</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-				<property>
-					<name>store</name>
-					<value>lucene</value>
-				</property>
-			</activation>
-			<properties>
-		        <lucene.version>4.3.0</lucene.version>
-			</properties>
-			<modules>
-				<module>cee-store-lucene</module>
-			</modules>
-			<dependencyManagement>
-				<dependencies>
-					<dependency>
-						<groupId>com.cee</groupId>
-						<artifactId>cee-store-lucene</artifactId>
-						<version>${project.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.code.gson</groupId>
-						<artifactId>gson</artifactId>
-						<version>2.2.4</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.lucene</groupId>
-						<artifactId>lucene-analyzers-common</artifactId>
-						<version>${lucene.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.lucene</groupId>
-						<artifactId>lucene-core</artifactId>
-						<version>${lucene.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.lucene</groupId>
-						<artifactId>lucene-queryparser</artifactId>
-						<version>${lucene.version}</version>
-					</dependency>
-				</dependencies>
-			</dependencyManagement>
-		</profile>
-		<profile>
-			<!--
+      <!--
 			****************************** 
 			* GWT client                 *
 			******************************
@@ -241,6 +139,7 @@
 		<module>cee-parser</module>
 		<module>cee-parser-impl</module>
 		<module>cee-store-api</module>
+    <module>cee-store-lucene</module>
 		<module>cee-search-api</module>
 		<module>cee-client-api</module>
 		<module>cee-store-test-suite</module>
@@ -281,6 +180,11 @@
 				<classifier>sources</classifier>
 				<version>${project.version}</version>
 			</dependency>
+      <dependency>
+	      <groupId>com.cee</groupId>
+	      <artifactId>cee-store-lucene</artifactId>
+	      <version>${project.version}</version>
+      </dependency>
 			<dependency>
 				<groupId>com.cee</groupId>
 				<artifactId>cee-client-api</artifactId>
@@ -343,14 +247,8 @@
 				<version>${project.version}</version>
 				<type>war</type>
 			</dependency>
+
 			<!-- external -->
-			<!-- dependency>
-				<groupId>cglib</groupId>
-				<artifactId>cglib</artifactId>
-				<version>2.2</version>
-				<type>jar</type>
-				<scope>compile</scope>
-			</dependency -->
 			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
@@ -362,10 +260,10 @@
 				<version>2.1</version>
 			</dependency>
 			<dependency>
-                <groupId>com.cybozu.labs</groupId>
-                <artifactId>langdetect</artifactId>
-                <version>1.1-20120112</version>
-            </dependency>
+        <groupId>com.cybozu.labs</groupId>
+        <artifactId>langdetect</artifactId>
+        <version>1.1-20120112</version>
+      </dependency>
 			<dependency>
 				<groupId>com.google.gwt</groupId>
 				<artifactId>gwt-dev</artifactId>
@@ -407,9 +305,9 @@
 						<artifactId>spring-web</artifactId>
 					</exclusion>
 					<exclusion>
-	                    <groupId>xerces</groupId>
-	                    <artifactId>xercesImpl</artifactId>
-	                </exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
 				</exclusions>
 			</dependency>
 			<dependency>
@@ -418,9 +316,9 @@
 				<version>1.2.0</version>
 			</dependency>
 			<dependency>
-		        <groupId>javax.servlet</groupId>
-		        <artifactId>javax.servlet-api</artifactId>
-		        <version>3.0.1</version>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.validation</groupId>
@@ -429,8 +327,8 @@
 			</dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
-		    		<artifactId>javax.ws.rs-api</artifactId>
-		    		<version>2.0.1</version>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
@@ -448,9 +346,9 @@
 				<version>1.9.14</version>
 			</dependency>
 			<dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.1</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
@@ -473,6 +371,28 @@
 				<version>1.8.4</version>
 				<scope>test</scope>
 			</dependency>
+
+      <!-- lucene -->
+      <dependency>
+	      <groupId>com.google.code.gson</groupId>
+	      <artifactId>gson</artifactId>
+	      <version>2.2.4</version>
+      </dependency>
+      <dependency>
+	      <groupId>org.apache.lucene</groupId>
+	      <artifactId>lucene-analyzers-common</artifactId>
+	      <version>${lucene.version}</version>
+      </dependency>
+      <dependency>
+	      <groupId>org.apache.lucene</groupId>
+	      <artifactId>lucene-core</artifactId>
+	      <version>${lucene.version}</version>
+      </dependency>
+      <dependency>
+	      <groupId>org.apache.lucene</groupId>
+	      <artifactId>lucene-queryparser</artifactId>
+	      <version>${lucene.version}</version>
+      </dependency>
 			
 			<!-- jetty -->
 			<dependency>
@@ -587,11 +507,11 @@
 				<version>1.1</version>
 			</dependency>
 			<dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+        </dependency>
+      <dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
