--- a/cee-rest/pom.xml
+++ b/cee-rest/pom.xml
@@ -58,10 +58,15 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.bval</groupId>
-			<artifactId>org.apache.bval.bundle</artifactId>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+	     <groupId>javax.el</groupId>
+	     <artifactId>javax.el-api</artifactId>
+	     <scope>runtime</scope>
+	    </dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
