--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <!-- java version -->
   <jdk.version>1.8</jdk.version>
   <gwt.version>2.5.1</gwt.version>
-  <spring.version>3.1.0.RELEASE</spring.version>
+  <spring.version>4.1.6.RELEASE</spring.version>
   <slf4j.version>1.6.4</slf4j.version>
   <jetty.version>9.0.0.M0</jetty.version>
   <lucene.version>4.3.0</lucene.version>
@@ -278,6 +278,10 @@
     <version>1.0.0</version>
     <exclusions>
      <exclusion>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+     </exclusion>
+     <exclusion>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
      </exclusion>
@@ -309,14 +313,19 @@
     <version>1.2.0</version>
    </dependency>
    <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.0.1</version>
+     <groupId>javax.el</groupId>
+     <artifactId>javax.el-api</artifactId>
+     <version>2.2.4</version>
    </dependency>
    <dependency>
-    <groupId>javax.validation</groupId>
-    <artifactId>validation-api</artifactId>
-    <version>1.1.0.Final</version>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+   </dependency>
+   <dependency>
+     <groupId>javax.validation</groupId>
+     <artifactId>validation-api</artifactId>
+     <version>1.1.0.Final</version>
    </dependency>
    <dependency>
     <groupId>javax.ws.rs</groupId>
@@ -326,7 +335,7 @@
    <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.8.2</version>
+    <version>4.12</version>
    </dependency>
    <dependency>
     <groupId>net.java.dev.rome</groupId>
@@ -348,11 +357,11 @@
     <artifactId>httpclient</artifactId>
     <version>4.4</version>
    </dependency>
-   <dependency>
+   <!-- dependency>
     <groupId>org.apache.bval</groupId>
     <artifactId>org.apache.bval.bundle</artifactId>
     <version>0.5</version>
-   </dependency>
+   </dependency -->
    <dependency>
     <groupId>org.ccil.cowan.tagsoup</groupId>
     <artifactId>tagsoup</artifactId>
@@ -364,6 +373,11 @@
     <version>1.8.4</version>
     <scope>test</scope>
    </dependency>
+   <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-validator</artifactId>
+	<version>5.1.3.Final</version>
+   </dependency>   
 
    <!-- lucene -->
    <dependency>
